[gd_scene load_steps=6 format=3 uid="uid://bi2h78j7thclg"]

[ext_resource type="Script" uid="uid://ccc51ka1vvg4u" path="res://scripts/enemy_ai.gd" id="1_4gyqm"]
[ext_resource type="PackedScene" uid="uid://c5jf4oova0pag" path="res://assets/models/Jet.glb" id="1_7k104"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4gyqm"]
size = Vector3(15, 15, 15)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4ra3w"]
radius = 25.0
height = 100.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_md0e3"]
radius = 5.0
height = 200.0

[node name="Enemy" type="CharacterBody3D" groups=["enemies"]]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
collision_layer = 3
collision_mask = 3
motion_mode = 1
script = ExtResource("1_4gyqm")

[node name="Jet" parent="." instance=ExtResource("1_7k104")]
transform = Transform3D(-0.994762, 0, -0.10222, 0, 1, 0, 0.10222, 0, -0.994762, 0, 0, 0)

[node name="HitRegister" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0071731945, 0.99997425, 0, -0.99997425, 0.0071731945, 0.409668, -0.062498, -0.612923)
shape = SubResource("BoxShape3D_4gyqm")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[node name="DetectionNode" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionNode"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 4.940827e-06, 0, -56.516457)
shape = SubResource("CapsuleShape3D_4ra3w")

[node name="MuzzlePoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9940554, 0)

[node name="missileTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="gunFireTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="GunCoolDownTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="GunDetectionNode" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="GunDetectionNode"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 8.694933e-06, 0, -99.45841)
shape = SubResource("CapsuleShape3D_md0e3")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="body_entered" from="DetectionNode" to="." method="_on_detection_node_body_entered"]
[connection signal="body_exited" from="DetectionNode" to="." method="_on_detection_node_body_exited"]
[connection signal="timeout" from="gunFireTimer" to="." method="_on_gun_fire_timer_timeout"]
[connection signal="body_entered" from="GunDetectionNode" to="." method="_on_gun_detection_node_body_entered"]
[connection signal="body_exited" from="GunDetectionNode" to="." method="_on_gun_detection_node_body_exited"]
